@@ -5,7 +5,6 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Controller
@@ -13,15 +12,13 @@ public class HomeController {
 
     @GetMapping("/")
     public String home(Model model) {
-        // Sample car data
-        List<Car> cars = Arrays.asList(
+        List<Car> cars = List.of(
             new Car("Toyota Camry", "Sedan", 50),
-            new Car("Ford Mustang", "Coupe", 120),
-            new Car("Honda CR-V", "SUV", 80)
+            new Car("Honda Civic", "Sedan", 55),
+            new Car("Ford Explorer", "SUV", 80)
         );
-
-        model.addAttribute("cars", cars);  // pass cars to template
-        return "index"; // points to index.html in templates
+        model.addAttribute("cars", cars);
+        return "index";
     }
 }
 
